Fix layout issues

--- a/client/src/components/QuestionAnswer/styles.scss
+++ b/client/src/components/QuestionAnswer/styles.scss
@@ -4,10 +4,21 @@
 
 $prompt-height: 1rem;
 
+// For smaller displays
+@media(max-width:760px){
+  .logo{
+    text-align: center;
+     margin-top:60px;
+    }
+}
+// For larger displays
+@media(min-width:760px){
 .logo{
 text-align: center;
  margin-top:20px;
 }
+}
+
 
 
 .questions{
