--- a/client/src/styles/Wall.scss
+++ b/client/src/styles/Wall.scss
@@ -1,6 +1,7 @@
 .timeline{
   //border: 2px solid #03A9F4;
-  margin-top:10px;
+  margin-top:2%;
+  margin-bottom:2%;
 }
 
 
